<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center"
                android:id="@+id/back_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/red"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_back" />

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/red"
                android:text="@string/playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

    <include
        android:id="@+id/checkInet"
        android:visibility="gone"
        layout="@layout/check_internet"/>

<ScrollView
    android:id="@+id/scroll"
    android:layout_below="@id/toolbar"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.video.VideoActivity">


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src ="@drawable/ic_launcher_background"
        android:id="@+id/video_ev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        tools:ignore="ContentDescription" />



    <LinearLayout
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/video_ev"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_tv"
            android:paddingTop="24sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/how_displacement_instability_uncertainty_affect_children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_btn"
            android:drawableEnd="@drawable/ic_baseline_download"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            android:text="@string/download"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp"
            android:paddingTop="10dp"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            tools:text="@string/description_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</RelativeLayout>
