<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image_ev"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="120dp"
            android:layout_height="80dp"/>


        <View
            android:id="@+id/black_view"
            android:layout_gravity="bottom"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:background="#9C000000"
            />


        <TextView
            android:id="@+id/playlist_tv"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom|center"
            android:textSize="12sp"
            android:text="@string/playlist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintStart_toEndOf="@id/cardView"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:maxLines="1"
            android:lines="2"
            android:id="@+id/playlistName_tv"
            android:textStyle="bold"
            android:text="@string/emotional_well_being_healing_practices_for_children"
            android:textColor="@color/black"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/playlistCount_tv"
            android:layout_marginTop="25dp"
            android:text="@string/_32_video_series"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>